ingress/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production-nginx
spec:
  rules:
  - host: "cd.oci1.jpto.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts: 
    - cd.oci1.jpto.dev
    secretName: cd-oci1-jptodev-tls-production
